<resources>
    <string name="app_name">Panahon</string>
    <string name="nav_forecast">Forecast</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="iv_weather">The Vector corresponding to the current weather</string>
    <string name="tv_temperature_temp">29</string>
    <string name="tv_temp_degree_temp">°C</string>
    <string name="tv_location">Binan City</string>
    <string name="tv_day_temp">Monday</string>
    <string name="tv_weather_desc">Sunny</string>
    <string name="tv_settings_placeholder">Settings</string>
    <string name="switch_celsius_fahrenheit">Fahrenheit/Celsius</string>
    <string name="tv_humidity_temp">: 77%</string>
    <string name="today_placeholder">TODAY</string>
    <string name="iv_chances_rain">logo of the precipitation</string>
    <string name="iv_humidity">logo of humidity</string>
    <string name="et_search_bar">Search Locations here</string>
</resources>