<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForecastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forecast_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sunny_bg">

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-5dp"
            android:contentDescription="@string/iv_weather"
            android:src="@drawable/ic_sun"
            app:layout_constraintBottom_toTopOf="@+id/tv_weather_desc"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="590dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="18dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="18dp" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-11dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/tv_temperature_temp"
            android:textSize="90sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_weather"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_today" />

        <TextView
            android:id="@+id/tv_temp_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/tv_temp_degree_temp"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/tv_location"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/today_placeholder"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/tv_weather_desc"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_humidity_temp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

        <TextView
            android:id="@+id/tv_precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_humidity_temp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintStart_toEndOf="@+id/iv_chances_rain"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="0dp"
            android:layout_height="170dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left" />

        <ImageView
            android:id="@+id/iv_chances_rain"
            android:layout_width="42dp"
            android:layout_height="27dp"
            android:contentDescription="@string/iv_chances_rain"
            android:src="@drawable/ic_precip_black"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

        <ImageView
            android:id="@+id/iv_humidity"
            android:layout_width="42dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_humidity_black"
            app:layout_constraintBottom_toTopOf="@+id/rv_forecast"
            app:layout_constraintEnd_toStartOf="@+id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather"
            android:contentDescription="@string/iv_humidity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>