<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_template"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_template"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_template_weather"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:contentDescription="@string/iv_weather"
            app:layout_constraintEnd_toStartOf="@+id/guideline_template_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_template_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_template_day"
            app:srcCompat="@drawable/ic_sun" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_template_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="35dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_template_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="35dp" />

        <TextView
            android:id="@+id/tv_template_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:text="@string/tv_day_temp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_template_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_template_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_template_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_temperature_temp"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_template_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_template_left"
            app:layout_constraintTop_toBottomOf="@+id/iv_template_weather" />

        <TextView
            android:id="@+id/tv_template_unit_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_temp_degree_temp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_template_temp"
            app:layout_constraintTop_toTopOf="@+id/tv_template_temp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>